apps/base/kube-system/authentication/dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  labels:
    app: dex
  name: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      namespace: kube-system
      labels:
        app: dex
    spec:
      serviceAccountName: dex # This is created below
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - image: quay.io/dexidp/dex:v2.28.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]

        ports:
        - name: http
          containerPort: 5556

        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg

      volumes:
      - name: config
        configMap:
          name: dex
          items:
          - key: config.yaml
            path: config.yaml
          - key: googleAuth.json
            path: googleAuth.json
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: dex
spec:
  type: NodePort
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    app: dex
---
# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - oidc.${CLUSTER_DOMAIN}
  rules:
  - host: oidc.${CLUSTER_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: dex
          servicePort: dex
